--- a/Proyecto Gatito/gatito.html
+++ b/Proyecto Gatito/gatito.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Gatito.css"
+    <link rel="stylesheet" href="css/Gatito.css">
     <title>Gatito</title>
 </head>
 <body>
@@ -15,6 +15,18 @@
         <input type="text" id="jugador2">
         <button onclick="inicioJuego()">Iniciar juego</button>
     </div>
+    <div class="tablero hidden" id="tablero">
+        <div class="cell" data-index="0"></div>
+        <div class="cell" data-index="1"></div>
+        <div class="cell" data-index="2"></div>
+        <div class="cell" data-index="3"></div>
+        <div class="cell" data-index="4"></div>
+        <div class="cell" data-index="5"></div>
+        <div class="cell" data-index="6"></div>
+        <div class="cell" data-index="7"></div>
+        <div class="cell" data-index="8"></div>
+    </div>
+    <div class="hidden" id="message"></div>
     <script src="js/Gatito.js"></script>
 </body>
 </html>
